fix horizontal overflow on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -136,8 +136,10 @@ h1 {
 @media (max-width: 740px) {
   .content {
     width: 100%;
-    margin-left: 28px;
-    margin-top: 18px;
+    margin-left: 0;
+    margin-top: 0;
+    padding-left: 28px;
+    padding-top: 18px;
   }
 }
 
